--- a/themes/raiser/sass/components/_campaign-team-individual-list.scss
+++ b/themes/raiser/sass/components/_campaign-team-individual-list.scss
@@ -49,21 +49,19 @@
       a { color: $primary; }
     }
     .redhen_campaign_page_team {
-      padding-left: em(16);
+      padding-left: em(22);
       margin-top: em(8);
       line-height: 1;
-      .field-label {
-        width: 22%;
-      }
-      .field-items {
-        width: 78%;
-      }
+      position: absolute;
+      width: 100%;
+      bottom: em(12);
+      font-size: em(12);
+
     }
     .field-name-redhen-campaign-goal {
       color: $primary;
       font-size: em(22);
-      line-height: 1.6;
-      padding-left: em(10);
+      padding-left: em(12);
       .rhc_progress {
         display: inline;
         font-size: em(16);
@@ -71,15 +69,14 @@
     }
 
     .redhen-contact-contact {
+      margin: 0 em(16) em(16) em(16);
       display: block;
-      padding: 0 1em;
       text-align: center;
-
+      float: none;
       img {
         border-radius: em(8);
-        border: 3px solid $white;
         @include box-shadow(0 3px 5px $gray);
-        width: 97%;
+        width: 100%;
       }
 
     }
@@ -88,18 +85,19 @@
     .redhen_campaign_page_title {
       font-size: em(16);
       margin-left: 1em;
+      margin-top: 0;
       width: 80%;
     }
 
 
     .redhen-campaign-page-team {
       .field-name-field-logo {
-        margin: 0 em(8) em(8) em(16);
+        margin: 0 em(16) em(16) em(16);
+        float: none;
         img {
           border-radius: em(8);
-          border: 3px solid $white;
           @include box-shadow(0 3px 5px $gray);
-          width: 97%;
+          width: 100%;
         }
       }
 
