--- a/themes/raiser/css/styles.css
+++ b/themes/raiser/css/styles.css
@@ -1497,7 +1497,7 @@ body.front #main #content {
 }
 
 /* line 3, ../sass/components/_campaign-team-individual-list.scss */
-.view-campaign-pages .form-radios .form-item {
+.view-campaign-pages #edit-fundraiser-type .form-item, .page-redhen-campaign-page #edit-fundraiser-type .form-item {
   background: none;
   padding: 0.8em 1em;
   border-radius: 0.7em;
@@ -1508,38 +1508,39 @@ body.front #main #content {
   border: 3px solid #5e9733;
   box-shadow: none;
   color: #5e9733;
+  padding: 0.4em 1em;
   cursor: pointer;
   display: inline-block;
 }
 /* line 50, ../sass/_mixins.scss */
-.view-campaign-pages .form-radios .form-item:hover {
+.view-campaign-pages #edit-fundraiser-type .form-item:hover, .page-redhen-campaign-page #edit-fundraiser-type .form-item:hover {
   -webkit-transition: all 0.5s;
   -moz-transition: all 0.5s;
   -o-transition: all 0.5s;
   transition: all 0.5s;
 }
 /* line 62, ../sass/_mixins.scss */
-.view-campaign-pages .form-radios .form-item:hover {
+.view-campaign-pages #edit-fundraiser-type .form-item:hover, .page-redhen-campaign-page #edit-fundraiser-type .form-item:hover {
   background: #5e9733;
   border: 3px solid #90c965;
   color: white;
 }
-/* line 7, ../sass/components/_campaign-team-individual-list.scss */
-.view-campaign-pages .form-radios .form-item input {
+/* line 8, ../sass/components/_campaign-team-individual-list.scss */
+.view-campaign-pages #edit-fundraiser-type .form-item input, .page-redhen-campaign-page #edit-fundraiser-type .form-item input {
   display: none;
 }
-/* line 10, ../sass/components/_campaign-team-individual-list.scss */
-.view-campaign-pages .form-radios .form-item label {
+/* line 11, ../sass/components/_campaign-team-individual-list.scss */
+.view-campaign-pages #edit-fundraiser-type .form-item label, .page-redhen-campaign-page #edit-fundraiser-type .form-item label {
   cursor: pointer;
 }
-/* line 13, ../sass/components/_campaign-team-individual-list.scss */
-.view-campaign-pages .form-radios .form-item.checked {
+/* line 14, ../sass/components/_campaign-team-individual-list.scss */
+.view-campaign-pages #edit-fundraiser-type .form-item.checked, .page-redhen-campaign-page #edit-fundraiser-type .form-item.checked {
   background: #5e9733;
   border: 3px solid #90c965;
   color: white;
 }
-/* line 20, ../sass/components/_campaign-team-individual-list.scss */
-.view-campaign-pages .views-row {
+/* line 21, ../sass/components/_campaign-team-individual-list.scss */
+.view-campaign-pages .views-row, .page-redhen-campaign-page .views-row {
   -webkit-box-shadow: 0 3px 5px #989898;
   -moz-box-shadow: 0 3px 5px #989898;
   box-shadow: 0 3px 5px #989898;
@@ -1550,8 +1551,8 @@ body.front #main #content {
   padding-top: 1em;
 }
 @media (min-width: 992px) {
-  /* line 20, ../sass/components/_campaign-team-individual-list.scss */
-  .view-campaign-pages .views-row {
+  /* line 21, ../sass/components/_campaign-team-individual-list.scss */
+  .view-campaign-pages .views-row, .page-redhen-campaign-page .views-row {
     display: inline-block;
     float: left;
     margin-bottom: 2em;
@@ -1561,25 +1562,25 @@ body.front #main #content {
     position: relative;
     width: 31.33333%;
   }
-  /* line 30, ../sass/components/_campaign-team-individual-list.scss */
-  .view-campaign-pages .views-row:nth-child(3n+4) {
+  /* line 31, ../sass/components/_campaign-team-individual-list.scss */
+  .view-campaign-pages .views-row:nth-child(3n+4), .page-redhen-campaign-page .views-row:nth-child(3n+4) {
     clear: both;
   }
 }
-/* line 42, ../sass/components/_campaign-team-individual-list.scss */
-.view-campaign-pages .views-row h2 {
+/* line 43, ../sass/components/_campaign-team-individual-list.scss */
+.view-campaign-pages .views-row h2, .page-redhen-campaign-page .views-row h2 {
   font-size: 1.125em;
   line-height: 1em;
   margin-top: 0;
   padding: 0 1em;
   text-align: left;
 }
-/* line 49, ../sass/components/_campaign-team-individual-list.scss */
-.view-campaign-pages .views-row h2 a {
+/* line 50, ../sass/components/_campaign-team-individual-list.scss */
+.view-campaign-pages .views-row h2 a, .page-redhen-campaign-page .views-row h2 a {
   color: #5e9733;
 }
-/* line 51, ../sass/components/_campaign-team-individual-list.scss */
-.view-campaign-pages .views-row .redhen_campaign_page_team {
+/* line 52, ../sass/components/_campaign-team-individual-list.scss */
+.view-campaign-pages .views-row .redhen_campaign_page_team, .page-redhen-campaign-page .views-row .redhen_campaign_page_team {
   padding-left: 1.375em;
   margin-top: 0.5em;
   line-height: 1;
@@ -1588,55 +1589,56 @@ body.front #main #content {
   bottom: 0.75em;
   font-size: 0.75em;
 }
-/* line 61, ../sass/components/_campaign-team-individual-list.scss */
-.view-campaign-pages .views-row .field-name-redhen-campaign-goal {
+/* line 62, ../sass/components/_campaign-team-individual-list.scss */
+.view-campaign-pages .views-row .field-name-redhen-campaign-goal, .page-redhen-campaign-page .views-row .field-name-redhen-campaign-goal {
   color: #5e9733;
   font-size: 1.375em;
   padding-left: 0.75em;
 }
-/* line 65, ../sass/components/_campaign-team-individual-list.scss */
-.view-campaign-pages .views-row .field-name-redhen-campaign-goal .rhc_progress {
+/* line 66, ../sass/components/_campaign-team-individual-list.scss */
+.view-campaign-pages .views-row .field-name-redhen-campaign-goal .rhc_progress, .page-redhen-campaign-page .views-row .field-name-redhen-campaign-goal .rhc_progress {
   display: inline;
   font-size: 1em;
 }
-/* line 71, ../sass/components/_campaign-team-individual-list.scss */
-.view-campaign-pages .views-row .redhen-contact-contact {
+/* line 72, ../sass/components/_campaign-team-individual-list.scss */
+.view-campaign-pages .views-row .redhen-contact-contact, .page-redhen-campaign-page .views-row .redhen-contact-contact {
   margin: 0 1em 1em 1em;
   display: block;
   text-align: center;
   float: none;
 }
-/* line 76, ../sass/components/_campaign-team-individual-list.scss */
-.view-campaign-pages .views-row .redhen-contact-contact img {
+/* line 77, ../sass/components/_campaign-team-individual-list.scss */
+.view-campaign-pages .views-row .redhen-contact-contact img, .page-redhen-campaign-page .views-row .redhen-contact-contact img {
   border-radius: 0.5em;
   -webkit-box-shadow: 0 3px 5px #989898;
   -moz-box-shadow: 0 3px 5px #989898;
   box-shadow: 0 3px 5px #989898;
   width: 100%;
 }
-/* line 85, ../sass/components/_campaign-team-individual-list.scss */
+/* line 86, ../sass/components/_campaign-team-individual-list.scss */
 .view-campaign-pages .views-row .redhen_campaign_page_campaign,
-.view-campaign-pages .views-row .redhen_campaign_page_title {
+.view-campaign-pages .views-row .redhen_campaign_page_title, .page-redhen-campaign-page .views-row .redhen_campaign_page_campaign,
+.page-redhen-campaign-page .views-row .redhen_campaign_page_title {
   font-size: 1em;
   margin-left: 1em;
   margin-top: 0;
   width: 80%;
 }
-/* line 94, ../sass/components/_campaign-team-individual-list.scss */
-.view-campaign-pages .views-row .redhen-campaign-page-team .field-name-field-logo {
+/* line 95, ../sass/components/_campaign-team-individual-list.scss */
+.view-campaign-pages .views-row .redhen-campaign-page-team .field-name-field-logo, .page-redhen-campaign-page .views-row .redhen-campaign-page-team .field-name-field-logo {
   margin: 0 1em 1em 1em;
   float: none;
 }
-/* line 97, ../sass/components/_campaign-team-individual-list.scss */
-.view-campaign-pages .views-row .redhen-campaign-page-team .field-name-field-logo img {
+/* line 98, ../sass/components/_campaign-team-individual-list.scss */
+.view-campaign-pages .views-row .redhen-campaign-page-team .field-name-field-logo img, .page-redhen-campaign-page .views-row .redhen-campaign-page-team .field-name-field-logo img {
   border-radius: 0.5em;
   -webkit-box-shadow: 0 3px 5px #989898;
   -moz-box-shadow: 0 3px 5px #989898;
   box-shadow: 0 3px 5px #989898;
   width: 100%;
 }
-/* line 106, ../sass/components/_campaign-team-individual-list.scss */
-.view-campaign-pages .views-row .clearfix:after {
+/* line 107, ../sass/components/_campaign-team-individual-list.scss */
+.view-campaign-pages .views-row .clearfix:after, .page-redhen-campaign-page .views-row .clearfix:after {
   display: block !important;
 }
 
