--- a/themes/raiser/sass/components/_progress-bar.scss
+++ b/themes/raiser/sass/components/_progress-bar.scss
@@ -1,9 +1,9 @@
 .redhen-campaign-thermo-percent-bar-wrapper {
   background: $primary-widget + 20;
-  margin-top: 0.5em; 
+  margin-top: 0.5em;
   border: 3px solid $white;
   border-radius: 5px;
-  @include box-shadow(0 2px 3px #999); 
+  @include box-shadow(0 2px 3px #999);
   height: em(16);
   padding: 0;
   width: 90%;
@@ -12,7 +12,7 @@
   .redhen-campaign-thermo-percent-bar {
     background: $primary;
     @include border-radius(3px 0 0 3px);
-    height: 100%; 
+    height: 100%;
     margin: 0;
   }
 }
@@ -30,7 +30,7 @@
   }
 
   .rhc_goal {
-    color: $primary; 
+    color: $primary;
   }
 }
 
@@ -41,7 +41,11 @@
   margin-left: 1em;
 
   .date-display-interval {
-    color: $action; 
+    color: $action;
     font-size: em(18);
   }
+}
+
+.redhen_campaign_page_campaign {
+  margin-left: 1.4em;
 }
