--- a/themes/raiser/sass/components/_forms.scss
+++ b/themes/raiser/sass/components/_forms.scss
@@ -2,7 +2,7 @@
 .page-user,
 .not-logged-in.page-fundraise {
   h2.page__title {
-    text-align: center; 
+    text-align: center;
   }
 }
 #user-login,
@@ -25,27 +25,92 @@
     padding: 0;
     margin: 0;
   }
-  
+
   #edit-register,
   #edit-reset,
   #edit-login,
-  .form-item, 
+  .form-item,
   .form-actions {
-    padding: 0em 1em; 
+    padding: 0em 1em;
   }
-
 
   #edit-register,
   #edit-reset {
-    display: block; 
+    display: block;
   }
 
   .form-actions {
     margin-top: 1em;
     #edit-cancel {
-      @include muted-btn; 
+      @include muted-btn;
       float: right;
       padding: 0.6em 1em;
-    } 
+    }
+  }
+}
+#redhen-campaign-campaign-page-form {
+  .field-name-redhen-campaign-goal {
+    color: $black;
+    font-size: em(16);
+    padding-left: em(0);
+    .field-prefix {
+      color: $primary;
+      font-size: em(22);
+      line-height: em(28);
+    }
+    #edit-redhen-campaign-goal-und-0-value {
+      float: right;
+      width: 97%;
+    }
+    .description {
+      clear: both;
+    }
+  }
+  #edit-field-logo-und-0-title,
+  #edit-field-logo-und-0-preview,
+  #edit-field-story-media-und-0-title,
+  #edit-field-story-media-und-0-preview {
+    margin-bottom: em(-16);
+  }
+}
+#edit-field-start-date,
+#edit-field-end-date {
+  color: $black;
+  font-size: em(16);
+  margin-bottom: em(16);
+  margin-left: 0;
+  margin-top: 0.5em;
+  fieldset {
+    border: none;
+    padding: 0;
+  }
+  .container-inline-date .date-padding {
+    padding: 0;
+  }
+  .form-item label {
+    display: none;
+  }
+}
+
+.form-radio,
+.form-type-radio {
+  @include clear-btn;
+  padding: 0.4em 1em;
+  cursor: pointer;
+  display: inline-block;
+  input {
+    display: none;
+  }
+  label {
+    cursor: pointer;
+  }
+  &.checked {
+    background: $primary;
+    border: 3px solid $primary + 50;
+    color: $white;
+    cursor: default;
+    label {
+      cursor: default;
+    }
   }
 }
