--- a/themes/raiser/css/styles.css
+++ b/themes/raiser/css/styles.css
@@ -2117,11 +2117,20 @@ footer #colophon a:hover {
   display: none;
 }
 /* line 104, ../sass/components/_forms.scss */
+.form-radio .ajax-progress-throbber,
+.form-type-radio .ajax-progress-throbber {
+  position: absolute;
+  color: black;
+  line-height: 1.6;
+  left: 26%;
+  font-size: 0.875em;
+}
+/* line 111, ../sass/components/_forms.scss */
 .form-radio label,
 .form-type-radio label {
   cursor: pointer;
 }
-/* line 107, ../sass/components/_forms.scss */
+/* line 114, ../sass/components/_forms.scss */
 .form-radio.checked,
 .form-type-radio.checked {
   background: #5e9733;
@@ -2129,7 +2138,7 @@ footer #colophon a:hover {
   color: white;
   cursor: default;
 }
-/* line 112, ../sass/components/_forms.scss */
+/* line 119, ../sass/components/_forms.scss */
 .form-radio.checked label,
 .form-type-radio.checked label {
   cursor: default;
