--- a/themes/raiser/css/styles.css
+++ b/themes/raiser/css/styles.css
@@ -1723,13 +1723,14 @@ body.front #main #content {
   height: 150px;
   padding: 1em 1em 0;
   position: absolute;
-  width: 40%;
+  min-width: 40%;
+  max-width: 60%;
 }
-/* line 47, ../sass/components/_campaign_banner.scss */
+/* line 48, ../sass/components/_campaign_banner.scss */
 .page-redhen-campaign #highlighted .field-name-field-teaser .field-item {
   margin-top: 3em;
 }
-/* line 53, ../sass/components/_campaign_banner.scss */
+/* line 54, ../sass/components/_campaign_banner.scss */
 .page-redhen-campaign #highlighted .redhen_campaign_page_donate,
 .page-redhen-campaign #highlighted .field-type-redhen-donation {
   bottom: 2em;
@@ -1737,7 +1738,7 @@ body.front #main #content {
   right: 1em;
   z-index: 2;
 }
-/* line 59, ../sass/components/_campaign_banner.scss */
+/* line 60, ../sass/components/_campaign_banner.scss */
 .page-redhen-campaign #highlighted .redhen_campaign_page_donate a,
 .page-redhen-campaign #highlighted .field-type-redhen-donation a {
   background: none;
@@ -2045,15 +2046,8 @@ footer #colophon a:hover {
 #redhen-campaign-campaign-page-form .field-name-redhen-campaign-goal .description {
   clear: both;
 }
-/* line 72, ../sass/components/_forms.scss */
-#redhen-campaign-campaign-page-form #edit-field-logo-und-0-title,
-#redhen-campaign-campaign-page-form #edit-field-logo-und-0-preview,
-#redhen-campaign-campaign-page-form #edit-field-story-media-und-0-title,
-#redhen-campaign-campaign-page-form #edit-field-story-media-und-0-preview {
-  margin-bottom: -1em;
-}
 
-/* line 77, ../sass/components/_forms.scss */
+/* line 71, ../sass/components/_forms.scss */
 #edit-field-start-date,
 #edit-field-end-date {
   color: black;
@@ -2062,24 +2056,24 @@ footer #colophon a:hover {
   margin-left: 0;
   margin-top: 0.5em;
 }
-/* line 83, ../sass/components/_forms.scss */
+/* line 77, ../sass/components/_forms.scss */
 #edit-field-start-date fieldset,
 #edit-field-end-date fieldset {
   border: none;
   padding: 0;
 }
-/* line 87, ../sass/components/_forms.scss */
+/* line 81, ../sass/components/_forms.scss */
 #edit-field-start-date .container-inline-date .date-padding,
 #edit-field-end-date .container-inline-date .date-padding {
   padding: 0;
 }
-/* line 90, ../sass/components/_forms.scss */
+/* line 84, ../sass/components/_forms.scss */
 #edit-field-start-date .form-item label,
 #edit-field-end-date .form-item label {
   display: none;
 }
 
-/* line 96, ../sass/components/_forms.scss */
+/* line 90, ../sass/components/_forms.scss */
 .form-radio,
 .form-type-radio {
   background: none;
@@ -2111,12 +2105,12 @@ footer #colophon a:hover {
   border: 3px solid #90c965;
   color: white;
 }
-/* line 101, ../sass/components/_forms.scss */
+/* line 95, ../sass/components/_forms.scss */
 .form-radio input,
 .form-type-radio input {
   display: none;
 }
-/* line 104, ../sass/components/_forms.scss */
+/* line 98, ../sass/components/_forms.scss */
 .form-radio .ajax-progress-throbber,
 .form-type-radio .ajax-progress-throbber {
   position: absolute;
@@ -2125,12 +2119,12 @@ footer #colophon a:hover {
   left: 26%;
   font-size: 0.875em;
 }
-/* line 111, ../sass/components/_forms.scss */
+/* line 105, ../sass/components/_forms.scss */
 .form-radio label,
 .form-type-radio label {
   cursor: pointer;
 }
-/* line 114, ../sass/components/_forms.scss */
+/* line 108, ../sass/components/_forms.scss */
 .form-radio.checked,
 .form-type-radio.checked {
   background: #5e9733;
@@ -2138,10 +2132,15 @@ footer #colophon a:hover {
   color: white;
   cursor: default;
 }
-/* line 119, ../sass/components/_forms.scss */
+/* line 113, ../sass/components/_forms.scss */
 .form-radio.checked label,
 .form-type-radio.checked label {
   cursor: default;
+}
+
+/* line 118, ../sass/components/_forms.scss */
+#edit-cancel {
+  margin-left: 1em;
 }
 
 /* line 2, ../sass/components/_fundraise-workflow.scss */
@@ -2321,38 +2320,44 @@ footer #colophon a:hover {
 .page-redhen-campaign-edit .field-type-datetime input {
   font-size: 16px;
 }
-/* line 104, ../sass/components/_fundraise-workflow.scss */
+
+/* line 108, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .field-type-image,
 .page-redhen-campaign-page-add .field-type-image,
-.page-redhen-campaign-edit .field-type-image {
+.page-redhen-campaign-edit .field-type-image,
+.page-redhen-campaign-page .field-type-image {
   min-height: 2em;
 }
-/* line 106, ../sass/components/_fundraise-workflow.scss */
+/* line 110, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .field-type-image label,
 .page-redhen-campaign-page-add .field-type-image label,
-.page-redhen-campaign-edit .field-type-image label {
+.page-redhen-campaign-edit .field-type-image label,
+.page-redhen-campaign-page .field-type-image label {
   float: left;
   margin-right: 0.5em;
 }
-/* line 110, ../sass/components/_fundraise-workflow.scss */
+/* line 114, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .field-type-image .description,
 .page-redhen-campaign-page-add .field-type-image .description,
-.page-redhen-campaign-edit .field-type-image .description {
+.page-redhen-campaign-edit .field-type-image .description,
+.page-redhen-campaign-page .field-type-image .description {
   line-height: 1.7;
 }
-/* line 115, ../sass/components/_fundraise-workflow.scss */
+/* line 119, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general a.button,
 .page-redhen-campaign-page-add a.button,
-.page-redhen-campaign-edit a.button {
+.page-redhen-campaign-edit a.button,
+.page-redhen-campaign-page a.button {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
   line-height: 1;
 }
-/* line 119, ../sass/components/_fundraise-workflow.scss */
+/* line 124, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .form-actions,
 .page-redhen-campaign-page-add .form-actions,
-.page-redhen-campaign-edit .form-actions {
+.page-redhen-campaign-edit .form-actions,
+.page-redhen-campaign-page .form-actions {
   clear: both;
 }
 
@@ -2491,6 +2496,43 @@ footer #colophon a:hover {
 /* line 1, ../sass/components/_leaderboard.scss */
 #block-views-leaderboard-block {
   clear: both;
+}
+
+/* line 6, ../sass/components/_leaderboard.scss */
+.page-campaigns-leaderboard .view-content {
+  margin-top: 2em;
+}
+/* line 9, ../sass/components/_leaderboard.scss */
+.page-campaigns-leaderboard .entity-redhen-campaign-page {
+  position: relative;
+}
+/* line 12, ../sass/components/_leaderboard.scss */
+.page-campaigns-leaderboard img {
+  border-radius: 4px;
+}
+/* line 15, ../sass/components/_leaderboard.scss */
+.page-campaigns-leaderboard .redhen_campaign_page_title {
+  position: absolute;
+  top: 0.5em;
+  left: 7.5em;
+  margin-top: 0;
+}
+/* line 20, ../sass/components/_leaderboard.scss */
+.page-campaigns-leaderboard .redhen_campaign_page_title a {
+  font-size: 1.5em;
+}
+/* line 24, ../sass/components/_leaderboard.scss */
+.page-campaigns-leaderboard .field-name-redhen-campaign-goal {
+  position: absolute;
+  top: 3.125em;
+  left: 7.5em;
+  padding-left: 0;
+  font-size: 1em;
+  color: #5e9733;
+}
+/* line 31, ../sass/components/_leaderboard.scss */
+.page-campaigns-leaderboard .field-name-redhen-campaign-goal .rhc_progress {
+  display: inline-block;
 }
 
 /**
