--- a/themes/raiser/css/styles.css
+++ b/themes/raiser/css/styles.css
@@ -2047,33 +2047,41 @@ footer #colophon a:hover {
   clear: both;
 }
 
-/* line 71, ../sass/components/_forms.scss */
+/* line 73, ../sass/components/_forms.scss */
 #edit-field-start-date,
-#edit-field-end-date {
+#edit-field-end-date,
+.main-content-wrapper .field-name-field-end-date,
+.main-content-wrapper .field-name-field-start-date {
   color: black;
   font-size: 1em;
   margin-bottom: 1em;
   margin-left: 0;
   margin-top: 0.5em;
 }
-/* line 77, ../sass/components/_forms.scss */
+/* line 79, ../sass/components/_forms.scss */
 #edit-field-start-date fieldset,
-#edit-field-end-date fieldset {
+#edit-field-end-date fieldset,
+.main-content-wrapper .field-name-field-end-date fieldset,
+.main-content-wrapper .field-name-field-start-date fieldset {
   border: none;
   padding: 0;
 }
-/* line 81, ../sass/components/_forms.scss */
+/* line 83, ../sass/components/_forms.scss */
 #edit-field-start-date .container-inline-date .date-padding,
-#edit-field-end-date .container-inline-date .date-padding {
+#edit-field-end-date .container-inline-date .date-padding,
+.main-content-wrapper .field-name-field-end-date .container-inline-date .date-padding,
+.main-content-wrapper .field-name-field-start-date .container-inline-date .date-padding {
   padding: 0;
 }
-/* line 84, ../sass/components/_forms.scss */
+/* line 86, ../sass/components/_forms.scss */
 #edit-field-start-date .form-item label,
-#edit-field-end-date .form-item label {
+#edit-field-end-date .form-item label,
+.main-content-wrapper .field-name-field-end-date .form-item label,
+.main-content-wrapper .field-name-field-start-date .form-item label {
   display: none;
 }
 
-/* line 90, ../sass/components/_forms.scss */
+/* line 92, ../sass/components/_forms.scss */
 .form-radio,
 .form-type-radio {
   background: none;
@@ -2105,12 +2113,12 @@ footer #colophon a:hover {
   border: 3px solid #90c965;
   color: white;
 }
-/* line 95, ../sass/components/_forms.scss */
+/* line 97, ../sass/components/_forms.scss */
 .form-radio input,
 .form-type-radio input {
   display: none;
 }
-/* line 98, ../sass/components/_forms.scss */
+/* line 100, ../sass/components/_forms.scss */
 .form-radio .ajax-progress-throbber,
 .form-type-radio .ajax-progress-throbber {
   position: absolute;
@@ -2119,12 +2127,12 @@ footer #colophon a:hover {
   left: 26%;
   font-size: 0.875em;
 }
-/* line 105, ../sass/components/_forms.scss */
+/* line 107, ../sass/components/_forms.scss */
 .form-radio label,
 .form-type-radio label {
   cursor: pointer;
 }
-/* line 108, ../sass/components/_forms.scss */
+/* line 110, ../sass/components/_forms.scss */
 .form-radio.checked,
 .form-type-radio.checked {
   background: #5e9733;
@@ -2132,13 +2140,13 @@ footer #colophon a:hover {
   color: white;
   cursor: default;
 }
-/* line 113, ../sass/components/_forms.scss */
+/* line 115, ../sass/components/_forms.scss */
 .form-radio.checked label,
 .form-type-radio.checked label {
   cursor: default;
 }
 
-/* line 118, ../sass/components/_forms.scss */
+/* line 120, ../sass/components/_forms.scss */
 #edit-cancel {
   margin-left: 1em;
 }
@@ -2499,40 +2507,18 @@ footer #colophon a:hover {
 }
 
 /* line 6, ../sass/components/_leaderboard.scss */
+.page-campaigns-leaderboard td {
+  padding: 0.3125em 0.625em;
+  text-align: left;
+  font-size: 1em;
+}
+/* line 11, ../sass/components/_leaderboard.scss */
+.page-campaigns-leaderboard .views-field-progress:before {
+  content: "$ ";
+}
+/* line 14, ../sass/components/_leaderboard.scss */
 .page-campaigns-leaderboard .view-content {
   margin-top: 2em;
-}
-/* line 9, ../sass/components/_leaderboard.scss */
-.page-campaigns-leaderboard .entity-redhen-campaign-page {
-  position: relative;
-}
-/* line 12, ../sass/components/_leaderboard.scss */
-.page-campaigns-leaderboard img {
-  border-radius: 4px;
-}
-/* line 15, ../sass/components/_leaderboard.scss */
-.page-campaigns-leaderboard .redhen_campaign_page_title {
-  position: absolute;
-  top: 0.5em;
-  left: 7.5em;
-  margin-top: 0;
-}
-/* line 20, ../sass/components/_leaderboard.scss */
-.page-campaigns-leaderboard .redhen_campaign_page_title a {
-  font-size: 1.5em;
-}
-/* line 24, ../sass/components/_leaderboard.scss */
-.page-campaigns-leaderboard .field-name-redhen-campaign-goal {
-  position: absolute;
-  top: 3.125em;
-  left: 7.5em;
-  padding-left: 0;
-  font-size: 1em;
-  color: #5e9733;
-}
-/* line 31, ../sass/components/_leaderboard.scss */
-.page-campaigns-leaderboard .field-name-redhen-campaign-goal .rhc_progress {
-  display: inline-block;
 }
 
 /**
