--- a/themes/raiser/sass/components/_leaderboard.scss
+++ b/themes/raiser/sass/components/_leaderboard.scss
@@ -3,33 +3,15 @@
 }
 
 .page-campaigns-leaderboard {
+  td {
+    padding: em(5) em(10);
+    text-align: left;
+    font-size: em(16);
+  }
+  .views-field-progress:before {
+    content: "$ ";
+  }
   .view-content {
     margin-top: em(32);
-  }
-  .entity-redhen-campaign-page {
-    position: relative;
-  }
-  img {
-    border-radius: 4px;
-  }
-  .redhen_campaign_page_title {
-    position: absolute;
-    top: em(8);
-    left: em(120);
-    margin-top: 0;
-    a {
-      font-size: em(24);
-    }
-  }
-  .field-name-redhen-campaign-goal {
-    position: absolute;
-    top: em(50);
-    left: em(120);
-    padding-left: 0;
-    font-size: em(16);
-    color: $primary;
-    .rhc_progress {
-      display: inline-block;
-    }
   }
 }
