--- a/themes/raiser/css/styles.css
+++ b/themes/raiser/css/styles.css
@@ -3367,7 +3367,96 @@ tr.selected td {
 /* line 803, ../sass/components/_misc.scss */
 .progress .filled {
   background-color: #0072b9;
-  background-image: url('../images/progress.gif?1415050544');
+  background-image: url('../images/progress.gif?1415129624');
+}
+
+/* line 1, ../sass/components/_modal.scss */
+.section-media {
+  padding: 0;
+  margin: 0;
+  max-width: 785px;
+}
+/* line 5, ../sass/components/_modal.scss */
+.section-media .ui-widget-content {
+  border: 4px solid #5e9733;
+  padding: 0;
+}
+/* line 10, ../sass/components/_modal.scss */
+.section-media #media-browser-tabset .ui-tabs-nav {
+  border: none;
+  border-bottom: 4px solid #5e9733;
+  border-radius: 0;
+  background: #e5e5e5;
+}
+/* line 16, ../sass/components/_modal.scss */
+.section-media #media-browser-tabset .media-browser-tab {
+  border: none;
+  padding: 0 1em 1em;
+}
+/* line 20, ../sass/components/_modal.scss */
+.section-media #media-browser-tabset .form-type-file {
+  line-height: 1.6;
+  font-size: 1em;
+  font-family: Arial, Helvetica, Verdana, sans-serif;
+}
+/* line 24, ../sass/components/_modal.scss */
+.section-media #media-browser-tabset .form-type-file input {
+  line-height: 1;
+}
+/* line 27, ../sass/components/_modal.scss */
+.section-media #media-browser-tabset .form-type-file .description {
+  margin-top: 1.25em;
+}
+/* line 31, ../sass/components/_modal.scss */
+.section-media #media-browser-tabset .fake-cancel {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: none;
+  border: none;
+  color: #f8971c;
+  cursor: pointer;
+  margin-left: 1em;
+}
+/* line 41, ../sass/components/_modal.scss */
+.section-media #media-browser-tabset .fake-ok {
+  background: none;
+  padding: 0.8em 1em;
+  border-radius: 0.7em;
+  -webkit-box-shadow: 0 2px 3px #666666;
+  -moz-box-shadow: 0 2px 3px #666666;
+  box-shadow: 0 2px 3px #666666;
+  background: #f8971c;
+  border: 3px solid white;
+  color: white;
+  text-transform: uppercase;
+  padding: 0.8em 5em;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+/* line 50, ../sass/_mixins.scss */
+.section-media #media-browser-tabset .fake-ok:hover {
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
+}
+/* line 77, ../sass/_mixins.scss */
+.section-media #media-browser-tabset .fake-ok:hover {
+  color: white;
+  background: #ffab30;
+}
+/* line 47, ../sass/components/_modal.scss */
+.section-media #media-browser-tabset h3 {
+  font-family: Arial, Helvetica, Verdana, sans-serif;
+  font-size: 1em;
+  line-height: 1.6;
+  margin-bottom: 0.5em;
+}
+/* line 53, ../sass/components/_modal.scss */
+.section-media #media-browser-tabset ul {
+  margin-top: 0;
 }
 
 /* line 5, ../sass/components/_my_pages.scss */
